# tauri-app

./: .gitignore  Cargo.toml  README.md  SECURITY.md  index.html  issues.md  styles.css
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: app.rs  i18n.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: fuzz_argon2_derive.rs  fuzz_blind_index.rs  fuzz_master_key.rs  fuzz_xchacha_decrypt.rs  fuzz_xchacha_roundtrip.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/bridge/: handler.rs  mod.rs  protocol.rs
src-tauri/src/commands/: auth.rs  bridge.rs  device.rs  feuilles.rs  files.rs  import_export.rs  maintenance.rs  mod.rs  password_gen.rs  recovery.rs  saladiers.rs  settings.rs
src-tauri/src/crypto/: argon2_kdf.rs  blind_index.rs  keys.rs  mod.rs  xchacha.rs
src-tauri/src/db/: bridge.rs  feuilles.rs  mod.rs  saladiers.rs  schema.rs  server_auth.rs  settings.rs  users.rs
src-tauri/src/models/: feuille.rs  mod.rs  saladier.rs  settings.rs  user.rs
src-tauri/src/sync/: client.rs  commands.rs  export.rs  import.rs  mod.rs  recovery.rs
src-tauri/tests/: integration.rs
src/components/: dashboard.rs  documentation.rs  feuille_form.rs  login.rs  mod.rs  nag_screen.rs  panic_unlock.rs  password_utils.rs  recovery.rs  register.rs  saladier_view.rs  settings.rs  settings_data.rs  settings_devices.rs  settings_extension.rs  settings_general.rs  settings_keys.rs  settings_privacy.rs  settings_saladiers.rs  settings_security.rs  settings_subscription.rs  settings_sync.rs
supply-chain/: audits.toml  config.toml
