[package]
name = "rust-app-ui"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo-timers = "0.3"
serde_json = "1"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "EventTarget", "Storage"] }

[workspace]
members = ["src-tauri"]
