[package]
name = "rust-app-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.rust-app]
path = ".."

# --- Fuzz targets ---

[[bin]]
name = "fuzz_xchacha_roundtrip"
path = "fuzz_targets/fuzz_xchacha_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_xchacha_decrypt"
path = "fuzz_targets/fuzz_xchacha_decrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_argon2_derive"
path = "fuzz_targets/fuzz_argon2_derive.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_blind_index"
path = "fuzz_targets/fuzz_blind_index.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_master_key"
path = "fuzz_targets/fuzz_master_key.rs"
test = false
doc = false
bench = false
